--- a/14-express-web-server/index.html
+++ b/14-express-web-server/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    
+    <% const nama = 'adam abiyu' %>
+    <h1>
+        halo <% nama %>
+        
+    </h1>
 </body>
 </html>
